@@ -3,6 +3,10 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 5.4.12 - unreleased
 
+	Tom Collins
+	- vdelivermail: read full message, even on catchall delete/bounce
+	  to avoid SIGPIPE error if maildrop is calling vdelivermail.
+
 5.4.11 - released 20-Mar-05
 
 	Tom Collins
